k8s-manifests/logging-logstash.yaml
---
# Source: logstash/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: logstash
  namespace: "logging"
  labels:
    app.kubernetes.io/instance: logstash
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: logstash
    app.kubernetes.io/version: 9.1.2
    helm.sh/chart: logstash-7.0.11
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: logstash
      app.kubernetes.io/name: logstash
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 8080
          protocol: TCP
        - port: 9600
---
# Source: logstash/templates/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: logstash-headless
  namespace: "logging"
  labels:
    app.kubernetes.io/instance: logstash
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: logstash
    app.kubernetes.io/version: 9.1.2
    helm.sh/chart: logstash-7.0.11
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    -
      name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: logstash
    app.kubernetes.io/name: logstash
---
# Source: logstash/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: "logging"
  labels:
    app.kubernetes.io/instance: logstash
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: logstash
    app.kubernetes.io/version: 9.1.2
    helm.sh/chart: logstash-7.0.11
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: logstash
    app.kubernetes.io/name: logstash
---
# Source: logstash/templates/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: logstash
  namespace: "logging"
  labels:
    app.kubernetes.io/instance: logstash
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: logstash
    app.kubernetes.io/version: 9.1.2
    helm.sh/chart: logstash-7.0.11
spec:
  serviceName: logstash-headless
  replicas: 1
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: logstash
      app.kubernetes.io/name: logstash
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: logstash
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: logstash
        app.kubernetes.io/version: 9.1.2
        helm.sh/chart: logstash-7.0.11
      annotations:
        checksum/configuration: cdb5435a404128b97fd2f281e1622d5d352a3e17303999fa8a0e550234fcd670
    spec:
      
      serviceAccountName: logstash
      automountServiceAccountToken: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: logstash
                    app.kubernetes.io/name: logstash
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: logstash
          image: docker.elastic.co/logstash/logstash:8.11.3
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - name: monitoring
              containerPort: 9600
              protocol: TCP
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            tcpSocket:
              port: monitoring
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            httpGet:
              path: /
              port: monitoring
          resources:
            limits:
              cpu: 750m
              ephemeral-storage: 2Gi
              memory: 768Mi
            requests:
              cpu: 500m
              ephemeral-storage: 50Mi
              memory: 512Mi
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: data
              mountPath: /usr/share/logstash/data
            - name: configurations
              mountPath: /usr/share/logstash/pipeline/logstash.conf
              subPath: logstash.conf
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: configurations
          configMap:
            name: logstash
        - name: data
          emptyDir: {}
